# aegis

./: .gitignore  README.md  docker-compose.yml
client/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/chat/: page.tsx
client/src/app/dashboard/: page.tsx
client/src/app/graph/: page.tsx
client/src/app/memory/: page.tsx
client/src/app/settings/: page.tsx
client/src/app/timeline/: page.tsx
client/src/components/: AppShell.tsx
client/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Page.tsx
client/src/lib/: api.ts  format.ts
client/src/store/: ui.ts
docker/: backend.Dockerfile  frontend.Dockerfile
server/: pyproject.toml
server/app/: __init__.py  config.py  dependencies.py  main.py  parsers.py  schemas.py
server/app/api/: __init__.py  datasets.py  graph.py  health.py  memory.py  sources.py  stats.py
server/memory/: __init__.py  base.py  factory.py
server/memory/providers/: __init__.py  aws_provider.py  in_memory.py  opensource_provider.py
server/tests/: __init__.py  conftest.py  test_aws_provider.py  test_factory.py  test_health.py  test_lifecycle.py  test_parsers.py
