[project]
name = "aegis-backend"
version = "3.0.0"
description = "AEGIS — Memory Operating System for AI Research (FastAPI backend)"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    # Settings / validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Ingestion parsers
    "pypdf>=5.1",                 # PDF text extraction
    "trafilatura>=1.12",          # URL / article extraction
    "youtube-transcript-api>=0.6.3",
    "httpx>=0.27",
    # Memory backend (imported lazily so tests run without it)
    "cognee>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# E501: formatter handles line length
# B008: FastAPI relies on Depends()/File()/Body()/Form() as default arguments
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
